--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@
    --text-tertiary: #909090;
    --accent: #ff0000;
    --border: #e5e5e5;
+   --border-rgb: 229, 229, 229;
    --hover: #f2f2f2;
    --hover-bg: #f2f2f2;
 
@@ -168,6 +169,7 @@
    --text-tertiary: #666666;
    --accent: #ff0000;
    --border: #3f3f3f;
+   --border-rgb: 63, 63, 63;
    --hover: #3f3f3f;
    --hover-bg: #3f3f3f;
 
